test json to go

--- a/temps/index.html
+++ b/temps/index.html
@@ -7,7 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    test
+    <header>ici le header</header>
+    <div>ici le corps du site avec les articles aléatoires
+        {{article}}
+        {{article}}
+        {{article}}
+        {{article}}
+    </div>
+    <footer>ici le footer</footer>
 </body>
 </html>
 {{end}}
