before final push

--- a/temps/index.html
+++ b/temps/index.html
@@ -9,15 +9,7 @@
 </head>
 <body>
     <header>ici le header</header>
-        <div>ici le corps du site avec les articles aléatoires
-            <div class="article">
-                {{range .}}
-                    <div class="range">
-                {{.Name}}
-                    </div>
-                {{end}}
-            </div>
-        </div>
+    <div>ici le corps du site avec les articles aléatoire</div>
     <footer>ici le footer</footer>
 </body>
 </html>
