--- a/temps/ajout.html
+++ b/temps/ajout.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     il faudra un formulaire, avec les champs
-correspondant à la structure d'un article (soit : titre, auteur, date de
-création, introduction et corps de l'article).
+correspondant a la structure d'un article (soit : titre, auteur, date de
+creation, introduction et corps de l'article).
 </body>
 </html>
 {{end}}
