--- a/temps/index.html
+++ b/temps/index.html
@@ -8,7 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-    <header>ici le header</header>
+    <header class="header">
+        <nav class="topnav">
+            <a href="/categorie1">cat1</a>
+            <a href="/categorie2">cat2</a>
+            <a href="/categorie3">cat3</a>
+        </nav>
+        ici le header</header>
     <div>ici le corps du site avec les articles aléatoire</div>
     <footer>ici le footer</footer>
 </body>
