--- a/temps/ajout.html
+++ b/temps/ajout.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 </head>
 <body>
+    <form action="/upload" method="post" enctype="multipart/form-data">
+        <input type="file" name="file" />
+        <input type="submit" value="Upload" />
+    </form>
     il faudra un formulaire, avec les champs
 correspondant a la structure d'un article (soit : titre, auteur, date de
 creation, introduction et corps de l'article).
