header en cours

--- a/temps/index.html
+++ b/temps/index.html
@@ -10,9 +10,18 @@
 <body>
     <header class="header">
         <nav class="topnav">
-            <a href="/categorie1">cat1</a>
-            <a href="/categorie2">cat2</a>
-            <a href="/categorie3">cat3</a>
+            <!-- <button class="cat-btn" href="/categorie">Actualités</button>
+            <button class="cat-btn" href="/categorie">Tutoriels</button>
+            <button class="cat-btn" href="/categorie">E-Sport</button> -->
+            <a href="/categorie" class="cat-name">
+                <div class="cat-btn">Actualité</div>
+            </a> 
+            <a href="/categorie" class="cat-name">
+                <div class="cat-btn">Tuto</div>
+            </a>
+            <a href="/categorie" class="cat-name">
+                <div class="cat-btn">E-sport</div>
+            </a>
         </nav>
         ici le header</header>
     <div>ici le corps du site avec les articles aléatoire</div>
