--- a/temps/admin.html
+++ b/temps/admin.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="/ajout" class="bouton">Ajouter un article</a>
     elle permettra d'administrer les articles
 du blog, en affichant la liste des articles triés par catégorie la liste
 des articles avec un bouton qui laisse la possibilité de supprimer
