--- a/temps/index.html
+++ b/temps/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header class="header">
+        <a href="/admin" class="bouton">Admin</a>
         <nav class="topnav">
             <!-- <button class="cat-btn" href="/categorie">Actualités</button>
             <button class="cat-btn" href="/categorie">Tutoriels</button>
