--- a/temps/ajout.html
+++ b/temps/ajout.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <form action="/upload" method="post" enctype="multipart/form-data">
+        <input type="text" name="title" placeholder="Titre"/>
+        <input type="text" name="content" placeholder="Contenu de l'article"/>
+        <input type="text" name="author" placeholder="Auteur"/>
+        <input type="text" name="category" placeholder="Catégorie de l'article"/>
         <input type="file" name="file" />
         <input type="submit" value="Upload" />
     </form>
