--- a/temps/recherche.html
+++ b/temps/recherche.html
@@ -13,6 +13,10 @@
 mots indiqués dans la barre de recherche sont contenus dans le
 titre des articles.
 
+{{range .}}
+ {{.}}
+{{end}}
+
 </body>
 </html>
 {{end}}
