header footer et nav fait + rework de l'id visuel du site

--- a/temps/index.html
+++ b/temps/index.html
@@ -9,35 +9,81 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
-       
-        <nav class="topnav">
-            <!-- <button class="cat-btn" href="/categorie">Actualités</button>
-            <button class="cat-btn" href="/categorie">Tutoriels</button>
-            <button class="cat-btn" href="/categorie">E-Sport</button> -->
-            <a href="/categorie" class="cat-name">
-                <div class="cat-btn">Actualités</div>
-            </a> 
-            <a href="/categorie" class="cat-name">
-                <div class="cat-btn">Tutoriels</div>
-            </a>
-            <a href="/categorie" class="cat-name">
-                <div class="cat-btn">E-sport</div>
-            </a>
+    <header>
+        <nav class="navbar">
+            <a href="" class="logo"><img src="../static/img/logo_PGM.png" alt="logo PGM"></a>
+            <div class="nav-links">
+                <a href="/" class="cat-name">
+                    <div class="cat-btn-active">Accueil</div>
+                </a>
+                <a href="/categorie" class="cat-name">
+                    <div class="cat-btn">Actualités</div>
+                </a> 
+                <a href="/categorie" class="cat-name">
+                    <div class="cat-btn">Tutoriels</div>
+                </a>
+                <a href="/categorie" class="cat-name">
+                    <div class="cat-btn">E-sport</div>
+                </a>
+                <a href="/admin" class="cat-name">
+                    <div class="cat-btn">Admin</div>
+                </a>
+            </div>
+            <div class="searchBox">
+                <input class="searchInput"type="text" name="" placeholder="Rechercher">
+                <button class="searchButton" href="#">Go</button>
+            </div>
         </nav>
-        <div class="topadminbt">
-            <a href="/admin" class="admin-name">
-                <div class="admin-btm">Admin</div>
-            </a>
-        </div>
     </header>
+
     <div class="main">
-        <div class="article">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat ut molestias laboriosam, obcaecati facilis ipsum debitis minima minus totam ab laudantium aliquam rem laborum error libero eligendi eos architecto? Inventore atque voluptates facere sint accusamus maxime, vitae dolore ex impedit reiciendis laboriosam reprehenderit quaerat quae autem quibusdam enim temporibus! Consequatur sequi aliquam quam est tempore rem nemo nam nihil temporibus mollitia vitae amet aliquid, atque in laborum! Accusamus optio, non nesciunt quas quaerat voluptatem ut unde culpa dicta officia modi voluptates. Quia dignissimos sequi excepturi necessitatibus expedita, perferendis animi unde praesentium vel aliquid? Culpa quibusdam vitae voluptas, temporibus iste aperiam veritatis id vero excepturi iusto illo, eius repellendus amet. Totam, exercitationem error? Ex, amet blanditiis maxime officia deleniti, animi deserunt adipisci tenetur, nostrum suscipit aut! Fugit blanditiis ex ipsum assumenda cum dolorem neque rem pariatur? Excepturi eligendi incidunt porro iusto veniam cupiditate quia quis labore ipsam laborum, iure hic quae accusantium ut, cum rem. Quae minima quisquam repudiandae amet autem delectus blanditiis ut, deleniti saepe nihil adipisci corporis maiores ipsa aut nam incidunt. Aspernatur reprehenderit reiciendis natus fugit sit quasi dolorem autem, numquam quidem architecto dolorum eum molestiae, quia iste animi aperiam accusamus earum quisquam dignissimos facilis id amet inventore ratione totam! Quidem fugit facilis quis tenetur sapiente omnis excepturi qui deleniti. Eius optio eaque minima odio. Consequuntur, facere, aspernatur, modi explicabo a sequi debitis veniam sapiente vero sed velit? Ab ut voluptatibus consequatur qui, itaque natus temporibus maxime nam sequi alias, magni quibusdam delectus molestias sunt neque eius harum asperiores numquam quos! Optio vel, explicabo odit consequatur fugiat quae iste! Consectetur ad quam sit porro repudiandae rem ipsum velit, laudantium obcaecati necessitatibus fugiat nulla rerum, laborum, incidunt veniam blanditiis nobis quaerat! Nisi vero harum quibusdam est ratione porro magnam esse, dolor corrupti in molestias officiis cumque quas explicabo!</div>
-        <div class="article">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat ut molestias laboriosam, obcaecati facilis ipsum debitis minima minus totam ab laudantium aliquam rem laborum error libero eligendi eos architecto? Inventore atque voluptates facere sint accusamus maxime, vitae dolore ex impedit reiciendis laboriosam reprehenderit quaerat quae autem quibusdam enim temporibus! Consequatur sequi aliquam quam est tempore rem nemo nam nihil temporibus mollitia vitae amet aliquid, atque in laborum! Accusamus optio, non nesciunt quas quaerat voluptatem ut unde culpa dicta officia modi voluptates. Quia dignissimos sequi excepturi necessitatibus expedita, perferendis animi unde praesentium vel aliquid? Culpa quibusdam vitae voluptas, temporibus iste aperiam veritatis id vero excepturi iusto illo, eius repellendus amet. Totam, exercitationem error? Ex, amet blanditiis maxime officia deleniti, animi deserunt adipisci tenetur, nostrum suscipit aut! Fugit blanditiis ex ipsum assumenda cum dolorem neque rem pariatur? Excepturi eligendi incidunt porro iusto veniam cupiditate quia quis labore ipsam laborum, iure hic quae accusantium ut, cum rem. Quae minima quisquam repudiandae amet autem delectus blanditiis ut, deleniti saepe nihil adipisci corporis maiores ipsa aut nam incidunt. Aspernatur reprehenderit reiciendis natus fugit sit quasi dolorem autem, numquam quidem architecto dolorum eum molestiae, quia iste animi aperiam accusamus earum quisquam dignissimos facilis id amet inventore ratione totam! Quidem fugit facilis quis tenetur sapiente omnis excepturi qui deleniti. Eius optio eaque minima odio. Consequuntur, facere, aspernatur, modi explicabo a sequi debitis veniam sapiente vero sed velit? Ab ut voluptatibus consequatur qui, itaque natus temporibus maxime nam sequi alias, magni quibusdam delectus molestias sunt neque eius harum asperiores numquam quos! Optio vel, explicabo odit consequatur fugiat quae iste! Consectetur ad quam sit porro repudiandae rem ipsum velit, laudantium obcaecati necessitatibus fugiat nulla rerum, laborum, incidunt veniam blanditiis nobis quaerat! Nisi vero harum quibusdam est ratione porro magnam esse, dolor corrupti in molestias officiis cumque quas explicabo!</div>
-        <div class="article">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat ut molestias laboriosam, obcaecati facilis ipsum debitis minima minus totam ab laudantium aliquam rem laborum error libero eligendi eos architecto? Inventore atque voluptates facere sint accusamus maxime, vitae dolore ex impedit reiciendis laboriosam reprehenderit quaerat quae autem quibusdam enim temporibus! Consequatur sequi aliquam quam est tempore rem nemo nam nihil temporibus mollitia vitae amet aliquid, atque in laborum! Accusamus optio, non nesciunt quas quaerat voluptatem ut unde culpa dicta officia modi voluptates. Quia dignissimos sequi excepturi necessitatibus expedita, perferendis animi unde praesentium vel aliquid? Culpa quibusdam vitae voluptas, temporibus iste aperiam veritatis id vero excepturi iusto illo, eius repellendus amet. Totam, exercitationem error? Ex, amet blanditiis maxime officia deleniti, animi deserunt adipisci tenetur, nostrum suscipit aut! Fugit blanditiis ex ipsum assumenda cum dolorem neque rem pariatur? Excepturi eligendi incidunt porro iusto veniam cupiditate quia quis labore ipsam laborum, iure hic quae accusantium ut, cum rem. Quae minima quisquam repudiandae amet autem delectus blanditiis ut, deleniti saepe nihil adipisci corporis maiores ipsa aut nam incidunt. Aspernatur reprehenderit reiciendis natus fugit sit quasi dolorem autem, numquam quidem architecto dolorum eum molestiae, quia iste animi aperiam accusamus earum quisquam dignissimos facilis id amet inventore ratione totam! Quidem fugit facilis quis tenetur sapiente omnis excepturi qui deleniti. Eius optio eaque minima odio. Consequuntur, facere, aspernatur, modi explicabo a sequi debitis veniam sapiente vero sed velit? Ab ut voluptatibus consequatur qui, itaque natus temporibus maxime nam sequi alias, magni quibusdam delectus molestias sunt neque eius harum asperiores numquam quos! Optio vel, explicabo odit consequatur fugiat quae iste! Consectetur ad quam sit porro repudiandae rem ipsum velit, laudantium obcaecati necessitatibus fugiat nulla rerum, laborum, incidunt veniam blanditiis nobis quaerat! Nisi vero harum quibusdam est ratione porro magnam esse, dolor corrupti in molestias officiis cumque quas explicabo!</div>
-        <div class="article">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla fugiat ut molestias laboriosam, obcaecati facilis ipsum debitis minima minus totam ab laudantium aliquam rem laborum error libero eligendi eos architecto? Inventore atque voluptates facere sint accusamus maxime, vitae dolore ex impedit reiciendis laboriosam reprehenderit quaerat quae autem quibusdam enim temporibus! Consequatur sequi aliquam quam est tempore rem nemo nam nihil temporibus mollitia vitae amet aliquid, atque in laborum! Accusamus optio, non nesciunt quas quaerat voluptatem ut unde culpa dicta officia modi voluptates. Quia dignissimos sequi excepturi necessitatibus expedita, perferendis animi unde praesentium vel aliquid? Culpa quibusdam vitae voluptas, temporibus iste aperiam veritatis id vero excepturi iusto illo, eius repellendus amet. Totam, exercitationem error? Ex, amet blanditiis maxime officia deleniti, animi deserunt adipisci tenetur, nostrum suscipit aut! Fugit blanditiis ex ipsum assumenda cum dolorem neque rem pariatur? Excepturi eligendi incidunt porro iusto veniam cupiditate quia quis labore ipsam laborum, iure hic quae accusantium ut, cum rem. Quae minima quisquam repudiandae amet autem delectus blanditiis ut, deleniti saepe nihil adipisci corporis maiores ipsa aut nam incidunt. Aspernatur reprehenderit reiciendis natus fugit sit quasi dolorem autem, numquam quidem architecto dolorum eum molestiae, quia iste animi aperiam accusamus earum quisquam dignissimos facilis id amet inventore ratione totam! Quidem fugit facilis quis tenetur sapiente omnis excepturi qui deleniti. Eius optio eaque minima odio. Consequuntur, facere, aspernatur, modi explicabo a sequi debitis veniam sapiente vero sed velit? Ab ut voluptatibus consequatur qui, itaque natus temporibus maxime nam sequi alias, magni quibusdam delectus molestias sunt neque eius harum asperiores numquam quos! Optio vel, explicabo odit consequatur fugiat quae iste! Consectetur ad quam sit porro repudiandae rem ipsum velit, laudantium obcaecati necessitatibus fugiat nulla rerum, laborum, incidunt veniam blanditiis nobis quaerat! Nisi vero harum quibusdam est ratione porro magnam esse, dolor corrupti in molestias officiis cumque quas explicabo!</div>
+        <div class="article">
+            <h1>Titre de l'article</h1>
+            <img src="" alt="image de l'article">
+            <div class="cat-art">catégorie de l'article</div>
+            <div class="art-ctn">appercu de l'article</div>
+            <div class="date">date de l'article</div>
+        </div>
+        <div class="article">
+            <h1>Titre de l'article</h1>
+            <img src="" alt="image de l'article">
+            <div class="cat-art">catégorie de l'article</div>
+            <div class="art-ctn">appercu de l'article</div>
+            <div class="date">date de l'article</div>
+        </div>
+        <div class="article">
+            <h1>Titre de l'article</h1>
+            <img src="" alt="image de l'article">
+            <div class="cat-art">catégorie de l'article</div>
+            <div class="art-ctn">appercu de l'article</div>
+            <div class="date">date de l'article</div>
+        </div>
+        <div class="article">
+            <h1>Titre de l'article</h1>
+            <img src="" alt="image de l'article">
+            <div class="cat-art">catégorie de l'article</div>
+            <div class="art-ctn">appercu de l'article</div>
+            <div class="date">date de l'article</div>
+        </div>
     </div>        
-    <footer>ici le footer</footer>
+    <footer>
+        <div class="nav-footer">
+            <div class="top-footer">
+                <div class="logo-footer"><img src="../static/img/logo_PGM.png" alt="logo du footer"></div>
+                <nav class="footer-links">
+                        <a href="/admin">administration</a>
+                        <a href="/ajout">ajouter un article</a>
+                        <a href="/categorie">catégorie</a>
+                        <a href="/mentionslegales">mentions légales</a>
+                        <a href="/recherche">rechercher</a>
+                </nav>
+                <div class="footer-phrase">Inshallah ca passe</div>
+            </div>
+            <div class="bot-footer">
+                Arneau Commeau Deriu Herry Jullemier
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
 {{end}}
