--- a/temps/index.html
+++ b/temps/index.html
@@ -16,13 +16,13 @@
                 <a href="/" class="cat-name">
                     <div class="cat-btn-active">Accueil</div>
                 </a>
-                <a href="/categorie" class="cat-name">
+                <a href="/categorie?type=actu" class="cat-name">
                     <div class="cat-btn">Actualités</div>
                 </a> 
-                <a href="/categorie" class="cat-name">
+                <a href="/categorie?type=tuto" class="cat-name">
                     <div class="cat-btn">Tutoriels</div>
                 </a>
-                <a href="/categorie" class="cat-name">
+                <a href="/categorie?type=esport" class="cat-name">
                     <div class="cat-btn">E-sport</div>
                 </a>
                 <a href="/admin" class="cat-name">
@@ -38,29 +38,29 @@
 
     <div class="main">
         <div class="article">
-            <h1>Titre de l'article</h1>
             <img src="" alt="image de l'article">
+            <h1>Titre de l'article</h1>
             <div class="cat-art">catégorie de l'article</div>
             <div class="art-ctn">appercu de l'article</div>
             <div class="date">date de l'article</div>
         </div>
         <div class="article">
-            <h1>Titre de l'article</h1>
             <img src="" alt="image de l'article">
+            <h1>Titre de l'article</h1>
             <div class="cat-art">catégorie de l'article</div>
             <div class="art-ctn">appercu de l'article</div>
             <div class="date">date de l'article</div>
         </div>
         <div class="article">
-            <h1>Titre de l'article</h1>
             <img src="" alt="image de l'article">
+            <h1>Titre de l'article</h1>
             <div class="cat-art">catégorie de l'article</div>
             <div class="art-ctn">appercu de l'article</div>
             <div class="date">date de l'article</div>
         </div>
         <div class="article">
-            <h1>Titre de l'article</h1>
             <img src="" alt="image de l'article">
+            <h1>Titre de l'article</h1>
             <div class="cat-art">catégorie de l'article</div>
             <div class="art-ctn">appercu de l'article</div>
             <div class="date">date de l'article</div>
