--- a/temps/article.html
+++ b/temps/article.html
@@ -9,9 +9,58 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <a href="" class="logo"><img src="../static/img/logo_PGM.png" alt="logo PGM"></a>
+            <div class="nav-links">
+                <a href="/" class="cat-name">
+                    <div class="cat-btn-active">Accueil</div>
+                </a>
+                <a href="/categorie?type=actu" class="cat-name">
+                    <div class="cat-btn">Actualités</div>
+                </a> 
+                <a href="/categorie?type=tuto" class="cat-name">
+                    <div class="cat-btn">Tutoriels</div>
+                </a>
+                <a href="/categorie?type=esport" class="cat-name">
+                    <div class="cat-btn">E-sport</div>
+                </a>
+                <a href="/admin" class="cat-name">
+                    <div class="cat-btn">Admin</div>
+                </a>
+            </div>
+            <div class="searchBox">
+                <input class="searchInput"type="text" name="" placeholder="Rechercher">
+                <button class="searchButton" href="#">Go</button>
+            </div>
+        </nav>
+    </header>
+
+
+
     cette page doit contenir l'article en
 détail avec son titre, image, introduction, auteur, date, corps de
 l'article.
+
+
+<footer>
+    <div class="nav-footer">
+        <div class="top-footer">
+            <div class="logo-footer"><img src="../static/img/logo_PGM.png" alt="logo du footer"></div>
+            <nav class="footer-links">
+                    <a href="/admin">administration</a>
+                    <a href="/ajout">ajouter un article</a>
+                    <a href="/categorie">catégorie</a>
+                    <a href="/mentionslegales">mentions légales</a>
+                    <a href="/recherche">rechercher</a>
+            </nav>
+            <div class="footer-phrase">Inshallah ca passe</div>
+        </div>
+        <div class="bot-footer">
+            Arneau Commeau Deriu Herry Jullemier
+        </div>
+    </div>
+</footer>
 </body>
 </html>
 {{end}}
