--- a/temps/admin.html
+++ b/temps/admin.html
@@ -14,7 +14,7 @@
             <a href="" class="logo"><img src="../static/img/logo_PGM.png" alt="logo PGM"></a>
             <div class="nav-links">
                 <a href="/" class="cat-name">
-                    <div class="cat-btn-active">Accueil</div>
+                    <div class="cat-btn">Accueil</div>
                 </a>
                 <a href="/categorie?type=actu" class="cat-name">
                     <div class="cat-btn">Actualités</div>
@@ -23,10 +23,10 @@
                     <div class="cat-btn">Tutoriels</div>
                 </a>
                 <a href="/categorie?type=esport" class="cat-name">
-                    <div class="cat-btn">E-sport</div>
+                    <div class="cat-btn">E-Sport</div>
                 </a>
                 <a href="/admin" class="cat-name">
-                    <div class="cat-btn">Admin</div>
+                    <div class="cat-btn-active">Admin</div>
                 </a>
             </div>
             <div class="searchBox">
