--- a/temps/categorie.html
+++ b/temps/categorie.html
@@ -55,7 +55,9 @@
 
     cette page permet d'afficher la liste des
 articles contenus dans la catégorie sélectionnée.
-
+{{range .}}
+ {{.}}
+{{end}}
 
 <footer>
     <div class="nav-footer">
