--- a/temps/index.html
+++ b/temps/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="" class="logo"><img src="../static/img/logo_PGM.png" alt="logo PGM"></a>
+            <a href="/" class="logo"><img src="../static/img/logo_PGM.png" alt="logo PGM"></a>
             <div class="nav-links">
                 <a href="/" class="cat-name">
                     <div class="cat-btn-active">Accueil</div>
@@ -37,17 +37,19 @@
     </header>
 
     <div class="main">
-        {{range .}}
-        <div class="article">
-            <img src={{.Img}} alt="image de l'article" class="article-img">
-            <div class="article-text">
-                <h1 class="article-title">{{.Name}}</h1>
-                <div class="cat-art">{{.Category}}</div>
-                <div class="art-ctn">{{.Content}}</div>
-                <div class="date">{{.Date}}</div>
-            </div>
-        </div>
-        {{end}}
+        <a href="/article?type={{Id.}}">
+            {{range .}}
+                <div class="article">
+                    <img src={{.Img}} alt="image de l'article" class="article-img">
+                    <div class="article-text">
+                        <h1 class="article-title">{{.Name}}</h1>
+                        <div class="cat-art">{{.Category}}</div>
+                        <div class="art-ctn">{{.Content}}</div>
+                        <div class="date">{{.Date}}</div>
+                    </div>
+                </div>
+            {{end}}
+        </a>
     </div>          
     <footer>
         <div class="nav-footer">
