--- a/temps/categorie.html
+++ b/temps/categorie.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="" class="logo"><img src="../static/img/logo_PGM.png" alt="logo PGM"></a>
+            <a href="/" class="logo"><img src="../static/img/logo_PGM.png" alt="logo PGM"></a>
             <div class="nav-links">
                 <a href="/" class="cat-name">
                     <div class="cat-btn">Accueil</div>
