je sais plus ce que j'ai fais

--- a/temps/index.html
+++ b/temps/index.html
@@ -35,20 +35,27 @@
             </div>
         </nav>
     </header>
-
-    <div class="main">
-        {{range .}}
-        <div class="article">
-            <img src={{.Img}} alt="image de l'article" class="article-img">
-            <div class="article-text">
-                <h1 class="article-title">{{.Name}}</h1>
-                <div class="cat-art">{{.Category}}</div>
-                <div class="art-ctn">{{.Content}}</div>
-                <div class="date">{{.Date}}</div>
-            </div>
+    <div class="content">
+        <div class="sidebar-left">
+            votre pub ici les reufs
         </div>
-        {{end}}
-    </div>          
+        <div class="main">
+            {{range .}}
+            <div class="article">
+                <img src={{.Img}} alt="image de l'article" class="article-img">
+                <div class="article-text">
+                    <h1 class="article-title">{{.Name}}</h1>
+                    <div class="cat-art">{{.Category}}</div>
+                    <div class="art-pvw">{{.Preview}}</div>
+                    <div class="date">{{.Date}}</div>
+                </div>
+            </div>
+            {{end}}
+        </div> 
+        <div class="sidebar-right">
+            votre pub ici aussi mes reuf
+        </div> 
+    </div>        
     <footer>
         <div class="nav-footer">
             <div class="top-footer">
