--- a/temps/ajout.html
+++ b/temps/ajout.html
@@ -14,7 +14,7 @@
             <a href="/" class="logo"><img src="../static/img/logo_PGM.png" alt="logo PGM"></a>
             <div class="nav-links">
                 <a href="/" class="cat-name">
-                    <div class="cat-btn-active">Accueil</div>
+                    <div class="cat-btn">Accueil</div>
                 </a>
                 <a href="/categorie?type=actu" class="cat-name">
                     <div class="cat-btn">Actualités</div>
