--- a/temps/index.html
+++ b/temps/index.html
@@ -31,13 +31,13 @@
             </div>
             <div class="searchBox">
                 <input class="searchInput"type="text" name="" placeholder="Rechercher">
-                <button class="searchButton" href="#">Go</button>
+                <button class="searchButton" type="submit" href="#">Go</button>
             </div>
         </nav>
     </header>
     <div class="content">
         <div class="sidebar-left">
-            votre pub ici les reufs
+            votre pub ici
         </div>
         <div class="main">
             {{range .}}
@@ -55,7 +55,7 @@
         {{end}}
         </div> 
         <div class="sidebar-right">
-            votre pub ici aussi mes reuf
+            votre pub ici
         </div> 
     </div>        
     <footer>
