--- a/temps/error404.html
+++ b/temps/error404.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/global.css">
+    <!-- <link rel="stylesheet" href="../static/css/global.css"> -->
     <link rel="stylesheet" href="../static/css/error404.css">
     <title>Document</title>
 </head>
 <body>
-    cette page doit être affichée lorsque
-    l'utilisateur demande une ressource introuvable.
+    <div class="error-ctn">
+        <div class="error-404">
+          <div class="code">404</div>
+          <div class="error-message">page not found</div>
+        </div>
+      </div>
 </body>
 </html>
 {{end}}
