--- a/temps/categorie.html
+++ b/temps/categorie.html
@@ -16,7 +16,7 @@
                 <a href="/" class="cat-name">
                     <div class="cat-btn">Accueil</div>
                 </a>
-                <a href="/categorie?type=actu" class="cat-name">
+                <a href="/categorie?type=news" class="cat-name">
                     {{if eq .Type "actu"}}
                     <div class="cat-btn-active">Actualités</div>
                     {{else}}
