--- a/temps/recherche.html
+++ b/temps/recherche.html
@@ -16,7 +16,7 @@
                 <a href="/" class="cat-name">
                     <div class="cat-btn-active">Accueil</div>
                 </a>
-                <a href="/categorie?type=actu" class="cat-name">
+                <a href="/categorie?type=news" class="cat-name">
                     <div class="cat-btn">Actualités</div>
                 </a> 
                 <a href="/categorie?type=tuto" class="cat-name">
