--- a/temps/categorie.html
+++ b/temps/categorie.html
@@ -16,8 +16,8 @@
                 <a href="/" class="cat-name">
                     <div class="cat-btn">Accueil</div>
                 </a>
-                <a href="/categorie?type=actu" class="cat-name">
-                    {{if eq .Type "actu"}}
+                <a href="/categorie?type=news" class="cat-name">
+                    {{if eq .Type "news"}}
                     <div class="cat-btn-active">Actualités</div>
                     {{else}}
                     <div class="cat-btn">Actualités</div>
@@ -53,11 +53,21 @@
     </header>
 
 
-    cette page permet d'afficher la liste des
-articles contenus dans la catégorie sélectionnée.
-{{range .}}
- {{.}}
-{{end}}
+    <div class="main">
+        {{range .Data}}
+        <a href="/article?type={{.Id}}">
+            <div class="article">
+                    <img src={{.Img}} alt="image de l'article" class="article-img">
+                    <div class="article-text">
+                        <h1 class="article-title">{{.Name}}</h1>
+                        <div class="cat-art">{{.Category}}</div>
+                        <div class="art-pvw">{{.Preview}}</div>
+                        <div class="date">{{.Date}}</div>
+                    </div>
+            </div>
+        </a>
+    {{end}}
+    </div> 
 
 <footer>
     <div class="nav-footer">
