--- a/temps/recherche.html
+++ b/temps/recherche.html
@@ -14,7 +14,7 @@
             <a href="/" class="logo"><img src="../static/img/logo_PGM.png" alt="logo PGM"></a>
             <div class="nav-links">
                 <a href="/" class="cat-name">
-                    <div class="cat-btn-active">Accueil</div>
+                    <div class="cat-btn">Accueil</div>
                 </a>
                 <a href="/categorie?type=news" class="cat-name">
                     <div class="cat-btn">Actualités</div>
@@ -36,7 +36,31 @@
         </nav>
     </header>
 
+    <div class="content">
+        <div class="sidebar-left">
+            votre pub ici
+        </div>
+        <div class="main">
+            {{range .Data}}
+            <a href="/article?type={{.Id}}">
+                <div class="article">
+                        <img src={{.Img}} alt="image de l'article" class="article-img">
+                        <div class="article-text">
+                            <h1 class="article-title">{{.Name}}</h1>
+                            <div class="cat-art">{{.Category}}</div>
+                            <div class="art-pvw">{{.Preview}}</div>
+                            <div class="date">{{.Date}}</div>
+                        </div>
+                </div>
+            </a>
+        {{end}}
+        </div> 
+        <div class="sidebar-right">
+            votre pub ici
+        </div> 
+    </div>
 
+    
     elle affiche la liste des articles dont les
 mots indiqués dans la barre de recherche sont contenus dans le
 titre des articles.
