--- a/temps/article.html
+++ b/temps/article.html
@@ -42,14 +42,12 @@
         <div class="sidebar-left">
             votre pub ici les reufs
         </div>
-
-
         <div class="main">
             {{range .}}
                 {{if eq .Id .Id}}
                 <div class="article">
                     <h1 class="article-title">{{.Name}}</h1>
-                    <img src="{{.img}}" alt="image de l'article" class="article-img">
+                    <img src="../static/img/{{.Img}}" alt="image de l'article" class="article-img">
                     <div class="infoart">                    
                         <div class="date">{{.Date}}</div>
                         <div class="cat-art">{{.Category}}</div>
@@ -64,7 +62,6 @@
             votre pub ici les reufs
         </div> 
     </div>
-
     <footer>
         <div class="nav-footer">
             <div class="top-footer">
