--- a/temps/article.html
+++ b/temps/article.html
@@ -47,7 +47,7 @@
                 {{if eq .Id .Id}}
                 <div class="article">
                     <h1 class="article-title">{{.Name}}</h1>
-                    <img src="{{.img}}" alt="image de l'article" class="article-img">
+                    <img src="{{.Img}}" alt="image de l'article" class="article-img">
                     <div class="infoart">                    
                         <div class="date">{{.Date}}</div>
                         <div class="cat-art">{{.Category}}</div>
