fix le bug des images

--- a/temps/admin.html
+++ b/temps/admin.html
@@ -47,7 +47,7 @@
             <a href="/article?type={{.Id}}">
                 <div class="article">
                     <div class="artocle">
-                        <img src={{.Img}} alt="image de l'article" class="article-img">
+                        <img src="../static/img/{{.Img}}" alt="image de l'article" class="article-img">
                         <div class="article-text">
                             <h1 class="article-title">{{.Name}}</h1>
                             <div class="cat-art">{{.Category}}</div>
