--- a/temps/index.html
+++ b/temps/index.html
@@ -45,7 +45,7 @@
             {{range .}}
             <a href="/article?type={{.Id}}">
                 <div class="article">
-                        <img src={{.Img}} alt="image de l'article" class="article-img">
+                        <img src="../static/img/{{.Img}}" alt="image de l'article" class="article-img">
                         <div class="article-text">
                             <h1 class="article-title">{{.Name}}</h1>
                             <div class="cat-art">{{.Category}}</div>
